# Micro-Thick

./: README.md
micro-thick-github-ready/micro-thick/: LICENSE  README.md  pyproject.toml
micro-thick-github-ready/micro-thick/micro_thick/: __init__.py  constants.py  inflation.py  plotting.py  recombination.py  spectra.py
micro-thick-github-ready/micro-thick/micro_thick.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
micro-thick-github-ready/micro-thick/outputs/: micro_thick_inflation_summary.csv
micro-thick-github-ready/micro-thick/scripts/: run_baseline.py  run_inflation_models.py
micro-thick-github-ready/micro-thick/tests/: test_micro_thick.py
