[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-thick"
version = "0.1.0"
description = "Micro-Thick: toy simulations of Cosmic Microwave Background last-scattering thickness."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Khalil El Bourakadi"}]
license = {text = "MIT"}
keywords = ["cosmology", "cmb", "recombination", "inflation", "simulation"]
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[project.scripts]
micro-thick-baseline = "scripts.run_baseline:main"
micro-thick-inflation = "scripts.run_inflation_models:main"

[tool.setuptools]
packages = ["micro_thick"]
py-modules = []
